refactor: return center metrics as objects
